# ADCS

./: 404.html  README.md  adcs.py  examples.ipynb  index.html  mkdocs.yml  notbook_testbed.ipynb  objects.inv  partial_examples.ipynb  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
adcs/: index.html
adcs_pl/: index.html
core/: __init__.py  logger.py  state.py  transformations.py  utilities.py
docs/: adcs.md  adcs_pl.md  index.md
search/: search_index.json
setup/: __init__.py  initial_settings.json  initial_settings.py  magnetic.py  satellite.py  sensors.py  tle  tle.txt  transformations.py  two_line_element.py  utilities.py  visualizations.py
spacecraft/: __init__.py  actuator.py  satellite.py  sensors.py
templates/: __init__.py  actuator_template.py  initial_settings_template.py  satellite_template.py  sensors_template.py  two_line_element_template.py
tests/: conftest.py  test_actuator.py  test_sensors.py  test_transformations.py
visualizations/: visualizations.py
visualziations/: __init__.py  visualizations.py
