[project]
name = "adcs"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "skyfield (>=1.53,<2.0)",
    "sgp4 (>=2.24,<3.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipympl (>=0.9.7,<0.10.0)",
    "ppigrf (>=2.1.0,<3.0.0)",
    "pyigrf (>=1.0.0,<2.0.0)",
    "igrf (>=13.0.2,<14.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "kaleido (>=1.2.0,<2.0.0)",
    "anywidget (>=0.9.21,<0.10.0)"
]

[tool.poetry]
packages = [{include = "adcs", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
