[project]
name = "adcs"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.2.5",
    "skyfield==1.53",
    "sgp4==2.24",
    "scipy==1.15.3",
    "pandas==2.2.3",
    "matplotlib==3.10.3",
    "ipympl==0.9.7",
    "ppigrf==2.1.0",
    "pyigrf==1.0.0",
    "igrf==13.0.2",
    "plotly==6.4.0",
    "nbformat==5.10.4",
    "ipywidgets==8.1.8",
    "kaleido==1.2.0",
    "anywidget==0.9.21",
    "mkdocs-bootswatch==1.1"
]

[tool.poetry]
packages = [{include = "adcs", from = "src"}]

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
mkdocs-material = "9.7.0"
mkdocstrings = {extras = ["python"], version = "0.30.1"}
mkdocs-literate-nav = "0.6.2"
mkdocs-git-revision-date-localized-plugin = "^1.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["poetry-core==2.0.0"]
build-backend = "poetry.core.masonry.api"
